--- a/schedule.html
+++ b/schedule.html
@@ -155,7 +155,7 @@
                             More on congruences: powers, Fermat's little theorem, Euler's theorem, the phi function and the Chinese remainder theorem.
                         </td>
                         <td>Chapters 9, 10, 11 <em>[Silverman]</em></td>
-                        <td></td>
+                        <td><a href="lecture-notes/eulers-theorem-chinese-remainder.html">Euler's Theorem and the Chinese Remainder Theorem</a></td>
                         <td><a href="problem-sets.html">Problem Set 4</a> (Due Feb 27)</td>
                     </tr>
                     <tr>
