--- a/schedule.html
+++ b/schedule.html
@@ -165,7 +165,7 @@
                             <strong>(Remote lectures)</strong> Application of number theory to cryptography: RSA algorithm.
                         </td>
                         <td>Chapters 17, 18 <em>[Silverman]</em></td>
-                        <td></td>
+                        <td><a href="lecture-notes/RSA.html">Cryptography and RSA</a></td>
                         <td><a href="problem-sets.html">Problem Set 5</a> (Due Mar 6)</td>
                     </tr>
                     <tr>
